--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,20 @@
            font-size: 16pt;
        }
        #title{
-           color:rgb(118, 217, 247);
+           color:rgb(255, 126, 154);
            font-family:cursive;
            font-size: 26pt;
-           margin-left: 70px;
+           margin-left: 75px;
        }
        #tablita{
            text-align: right ;
+           font-family:cursive;
        }
        #doc{
            width:122px ;
        }
        #message{
-           width: 171px;
+           width: 172px;
        }
     </style>
 </head>
@@ -65,7 +66,7 @@
                   </select> <input id="doc"> </th>
             </tr>
             <tr>
-                <th><label for="message">Mensaje</label></th>
+                <th><label for="message">Mensaje:</label></th>
                 <th><textarea id="message"></textarea></th>
             </tr>
         </table>
