--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
            font-size: 16pt;
        }
        #title{
-           color:rgb(118, 217, 247);
+           color:rgb(202, 138, 255);
            font-family:cursive;
            font-size: 26pt;
        }
@@ -37,6 +37,6 @@
     <a href="contact.html" title="Contact" id="hrefcontact">Contact</a>   
     <h1 id="title">Bienvenido!</h1>
     <h2 id="subtitle"> Descripción</h2>
-    <p>Esta es la página principal de un blog de  </p>
+    <p>Esta es la página principal de un blog de las flores mas bonitas de Colombia, aqui encontraras todos los tipos de flores que se pueden encontrar en la flora de Colombia, diversos colores y formas. </p>
 </body>
 </html>
