--- a/gallery.html
+++ b/gallery.html
@@ -24,12 +24,14 @@
            font-size: 16pt;
        }
        #title{
-           color:rgb(118, 217, 247);
+           color:rgb(255, 98, 208);
            font-family:cursive;
            font-size: 26pt;
+           margin-left: 180px;
        }
        #imagen{
            width: 150px;
+           height: 150px;
            margin-right: 5px;
 
        }
@@ -44,35 +46,35 @@
     <table>
         <tr>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor1.jpg">
             </th>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor2.png">
             </th>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
-            </th>
-        </tr>
-        <tr>
-            <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
-            </th>
-            <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
-            </th>
-            <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor3.jpg">
             </th>
         </tr>
         <tr>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor4.jpg">
             </th>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor5.jpg">
             </th>
             <th>
-                <img id="imagen" name="imagen" src="images/prueba.jpg">
+                <img id="imagen" name="imagen" src="images/flor6.jpg">
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor7.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor8.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor9.jpg">
             </th>
         </tr>
     </table>
