--- a/home.html
+++ b/home.html
@@ -28,6 +28,15 @@
            font-family:cursive;
            font-size: 26pt;
        }
+       #subtitle{
+            font-family:cursive;
+       }
+       #parrafo{
+            font-family: cursive;
+       }
+       #imagen{
+           width: 150px;
+       }
     </style>
 </head>
 <body>
@@ -37,6 +46,12 @@
     <a href="contact.html" title="Contact" id="hrefcontact">Contact</a>   
     <h1 id="title">Bienvenido!</h1>
     <h2 id="subtitle"> Descripción</h2>
-    <p>Esta es la página principal de un blog de las flores mas bonitas de Colombia, aqui encontraras todos los tipos de flores que se pueden encontrar en la flora de Colombia, diversos colores y formas. </p>
+    <p id="parrafo">Esta es la página principal de un blog de las flores mas bonitas de Colombia. Aquí encontrarás todos los tipos de flores que se pueden encontrar en la flora de Colombia, diversos colores y formas. </p>
+    <table>
+        <tr>
+            <th> <img id="imagen"src="images/flores.jpg"></th> 
+            <th>nlksadnlks</th>
+        </tr>
+    </table>
 </body>
 </html>
