--- a/gallery.html
+++ b/gallery.html
@@ -24,9 +24,16 @@
            font-size: 16pt;
        }
        #title{
-           color:rgb(118, 217, 247);
+           color:rgb(255, 98, 208);
            font-family:cursive;
            font-size: 26pt;
+           margin-left: 180px;
+       }
+       #imagen{
+           width: 150px;
+           height: 150px;
+           margin-right: 5px;
+
        }
     </style>
 </head>
@@ -36,5 +43,40 @@
     <a href="gallery.html" title="Gallery" id="hrefgallery">Gallery</a>
     <a href="contact.html" title="Contact" id="hrefcontact">Contact</a>   
     <h1 id="title">Gallery</h1>
+    <table>
+        <tr>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor1.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor2.png">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor3.jpg">
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor4.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor5.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor6.jpg">
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor7.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor8.jpg">
+            </th>
+            <th>
+                <img id="imagen" name="imagen" src="images/flor9.jpg">
+            </th>
+        </tr>
+    </table>
 </body>
 </html>
