--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
            font-family:cursive;
        }
        #doc{
-           width:122px ;
+           width:132px ;
        }
        #message{
-           width: 172px;
+           width: 180px;
        }
     </style>
 </head>
@@ -68,6 +68,10 @@
             <tr>
                 <th><label for="message">Mensaje:</label></th>
                 <th><textarea id="message"></textarea></th>
+            </tr>
+            <tr>
+                <th></th>
+                <th style="text-align: left ;"><button>Enviar</button></th>
             </tr>
         </table>
         
