--- a/home.html
+++ b/home.html
@@ -36,6 +36,7 @@
        }
        #imagen{
            width: 150px;
+         
        }
     </style>
 </head>
@@ -50,7 +51,13 @@
     <table>
         <tr>
             <th> <img id="imagen"src="images/flores.jpg"></th> 
-            <th>nlksadnlks</th>
+            <th>Mayo 13 2022:</th>
+            <th style='font-size:14px;'>Tenemos el mejor blog de Colombia gracias a la variedad de flores</th>
+        </tr>
+        <tr>
+            <th> <img id="imagen"src="images/regar.jpg"></th> 
+            <th>Mayo 12 2022:</th>
+            <th style='font-size:14px;text-align:left;'>El agua es fundamental para tus flores no olvides regarlas</th>
         </tr>
     </table>
 </body>
